prevent overflow scrolling when pages are iframed

--- a/src/sass/base/_page.scss
+++ b/src/sass/base/_page.scss
@@ -10,6 +10,7 @@ html {
     overflow-x: hidden;
     // prevent horizontal jump when navigating short page <--> tall page
     overflow-y: scroll;
+    overflow-behavior: contain;
     scroll-behavior: smooth;
     // set the box model for the entire document
     box-sizing: border-box;
